--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <script>
+      require("./index.js");
+    </script>
   </body>
 </html>
