--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <div id="sidebar">
+      <button class="btn user-action" id="add-user-action-node">Add User Action Node</button>
+      <button class="btn system-action" id="add-system-action-node">Add System Action Node</button>
+      <button class="btn decision" id="add-decision-node">Add Decision Node</button>
+      <button class="btn edit" id="edit-node">Edit Node</button>
+      <button class="btn delete" id="delete-node">Delete Node</button>
+    </div>
     <script>
       require("./index.js");
     </script>
