more menu stuff

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,17 @@
   </head>
   <body>
     <div id="sidebar">
+      <button class="btn open-project" id="open-project">Open Project</button>
+      <button class="btn new-project" id="new-project">New Project</button>
+      <div class="separator"></div>
       <button class="btn user-action" id="add-user-action-node">Add User Action Node</button>
       <button class="btn system-action" id="add-system-action-node">Add System Action Node</button>
       <button class="btn decision" id="add-decision-node">Add Decision Node</button>
       <button class="btn edit" id="edit-node">Edit Node</button>
       <button class="btn delete" id="delete-node">Delete Node</button>
+      <div class="separator"></div>
+      <button class="btn save-project" id="save-project">Save Project</button>
+      <button class="btn save-project-as" id="save-project-as">Save As...</button>
     </div>
     <script>
       require("./index.js");
