--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Flow Mapper</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="sidebar">
+      <p class="data-label">Project Directory:</p>
+      <p class="project-data-item" id="project-directory"></p>
+      <p class="data-label">Project File Name:</p>
+      <p class="project-data-item" id="project-file-name"></p>
+      <p class="data-label">Project Last Saved:</p>
+      <p class="project-data-item" id="project-last-saved"></p>
+      <div class="separator"></div>
       <button class="btn open-project" id="open-project">Open Project</button>
       <button class="btn new-project" id="new-project">New Project</button>
       <div class="separator"></div>
