--- a/src/editNode.html
+++ b/src/editNode.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Montserrat&family=Nunito:ital@1&family=Open+Sans&family=Zen+Dots&family=Zilla+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Montserrat&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="editNode.css">
   </head>
   <body>
